--- a/TokTalk/app/build.gradle
+++ b/TokTalk/app/build.gradle
@@ -25,15 +25,21 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //noinspection GradleCompatible
+
+    
     compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.tsengvn:Typekit:1.0.0'
     compile 'com.google.firebase:firebase-config:10.0.1'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:cardview-v7:25.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.google.firebase:firebase-database:10.0.1'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:cardview-v7:25.0.+'
-
 }
+
+
 
 
 
