--- a/TokTalk/app/src/main/AndroidManifest.xml
+++ b/TokTalk/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".LoginActivity" />
-        <activity android:name=".SignupAcitivity"></activity>
+        <activity android:name=".SignupAcitivity" />
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
